tests/typing/good/testfile-subtype-2.scala

class A {}
class M { def m() { var a: A = null } }
object Main { def main(args: Array[String]) { } }
