tests/typing/bad/testfile-unbound_field-1.scala
class A { var a: A = null; def m() { var x = A.f } }
object Main { def main(args: Array[String]) { } }
